# TalentHut

./: FancyText.txt  README.md  hello.c
C++/SimpleLogging/: AppLogger  Makefile  logger.hpp  loggerFileBased.h  main.cpp  singletonlogger.hpp
C_Programming/: custom_linux_shell.c  lib.h  main.c  queue_linklist.c  satck_linklist.c  second_largest_in_array.c  second_smallest_in_array.c
C_Programming/Netlink_socket/: Makefile  netlink_user.c
C_Programming/clone/: clone2.c
C_Programming/debian_package/: README  README.txt  helloworld-1.0_amd64.deb
C_Programming/debug_printf/: function.c  header.h  main.c
C_Programming/encapsulation_datahiding/: Makefile  README  main.c
C_Programming/encapsulation_datahiding(Opaque)/: README.md  lib.c  main.h  main.out
C_Programming/exec/: exec1.c  exec4.c  exec5.c  test.c  test1.c
C_Programming/fork/: fork1.c  fork5.c  fork6.c  forks8.c  forks9.c
C_Programming/hash_table/: Readme.docx  hash.c
C_Programming/meson_application/: README.md  meson.build
C_Programming/meson_application/subprojects/: meson_dependency.wrap
C_Programming/misc/: allign_alloc.c  asm_in_c.c  before_after_main.c  binary_print.c  decimal_to_binary.c  enum_detailed.c  even_odd_thread_cond_var.c  fibonacci_recursion.c  getopt.c  getopt_long.c  indenting_c_program.c  mutex_c_implemetation.txt  no_of_ones.c  reverse_a_number.c  second_largest_in_array.c  second_smallest_in_array.c  smallest_array.c  spinlock_c_implementation  sum_of_digits.c  sum_var_args.c  user_malloc.c
C_Programming/msg_queue/: Makefile  README  msg_queue.h  msgq_client.c  msgq_server.c
C_Programming/shared_lib/: main.c  shared.h
C_Programming/singly_linked_list/: Makefile  README  linkedlist.out  main.c  meson.build  node.c  node.h
C_Programming/singly_linked_list/include/: node.h
C_Programming/static_lib/: main.c  static.c  static.h
Extras/steps_doc/: BBB_UBoot.odt  BBB_uboot_linux_porting.txt  Building_libnl_for_ARM  Eclipse_Makefile_Project  PATH_setting  RPI_Jessie_installation.txt  RPI_Ubuntu_Installation.txt  creating_desktop_icon_in_linux  creating_patch_diff.docx  cscopes  desktop_icon_creation.odt  device_driver  eclipse_commandline_arguments.txt  eclipse_plugin_python  eclipse_run_sudo_mode  enable_uart_RPI3.txt  formating_partitioning_SD_card_FDISK  i2c_setup_for RPI.txt  java_installation.txt  libnl_installing  wifi_RPI  (+10 more)
Fonts/: Sharma-Gubbi.sfd
Meson_build/mathematics/: meson.build
Meson_build/mathematics/src/: mathematics.c
Meson_build/mathematics/src/cli/: main.c
Meson_build/mathematics/tests/: division_tests.c
Python/: FancyText.txt  PYTHON.md  car  gui.py  json_to_csv_pandas.py  random_game.py  remote_connect_ssh.py  resistance_decoder.py  scrolling_images.py  timer.py  van_animation.py
Repo_Creation/: README
Steps_doc/: Install_required_gcc_version.txt  Sharma_n_Sharma_Eclipse_Profile.xml  VIM_Notes.md  bluez_compilation.txt  change_python_version.txt  cscopes  git_hint.md  kernel_compiling_steps  network_problem_ubuntu.txt  patch_creating_adding.doc  stm32_Keil_environment_setup_windows.txt  uboot_for_rpi  uninstalling_old_kernel.txt  vimrc_changes  vimrc_changes.md  wpa_supplicant_sourcecode_compilation  wpa_supplicant_wpa_cli_document
expect_automation/: README.md  expect_auto_ssh.exp  mock_ssh_server.py
python/: calculator.py
(+91 files in other folders)
